tests/reference/asr-matrix_matmul_01-a0e2017.stderr
warning: Implied save feature
 --> tests/errors/matrix_matmul_01.f90:3:5
  |
3 |     character :: a(3, 3)
  |     ^^^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

warning: Implied save feature
 --> tests/errors/matrix_matmul_01.f90:4:5
  |
4 |     integer :: b(3, 3)
  |     ^^^^^^^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: matmul accepts first matrix of type Integer, Real, Complex or Logical.
 --> tests/errors/matrix_matmul_01.f90:5:21
  |
5 |     print *, matmul(a, b)
  |                     ^ 
